--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,13 @@
 **/*.VC.db
 **/*.opendb
 
+# Автогенерируемые файлы
+**/*.aps
+**/*.ncb
+**/*.sdf
+**/*.opensdf
+**/*.VC.db
+
 # Mono auto generated files
 mono_crash.*
 
