--- a/.gitignore
+++ b/.gitignore
@@ -416,3 +416,9 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+/LABS C++/.vs/LABS C++/v17/.suo
+/LABS C++/.vs/LABS C++/v17/Browse.VC.db
+/LABS C++/.vs/LABS C++/v17/DocumentLayout.backup.json
+/LABS C++/.vs/LABS C++/v17/DocumentLayout.json
+/LABS C#/.vs/LABS C#/v17/.suo
+/LABS C#/.vs/LABS C#/v17/DocumentLayout.backup.json
