--- a/.gitignore
+++ b/.gitignore
@@ -421,4 +421,7 @@ FodyWeavers.xsd
 /LABS C++/.vs/LABS C++/v17/DocumentLayout.backup.json
 /LABS C++/.vs/LABS C++/v17/DocumentLayout.json
 /LABS C#/.vs/LABS C#/v17/.suo
+/LABS C#/.vs/LABS C#/v17/Browse.VC.db
 /LABS C#/.vs/LABS C#/v17/DocumentLayout.backup.json
+/LABS C#/.vs/LABS C#/v17/DocumentLayout.json
+
