--- a/.gitignore
+++ b/.gitignore
@@ -425,3 +425,6 @@ FodyWeavers.xsd
 /LABS C#/.vs/LABS C#/v17/DocumentLayout.backup.json
 /LABS C#/.vs/LABS C#/v17/DocumentLayout.json
 
+/LABS C#/.vs/LABS C#/v17/*
+/LABS C++/.vs/LABS C++/v17/*
+
