--- a/.gitignore
+++ b/.gitignore
@@ -428,3 +428,5 @@ FodyWeavers.xsd
 /LABS C#/.vs/LABS C#/v17/*
 /LABS C++/.vs/LABS C++/v17/*
 
+/LABS C++/.vs/LABS C++/v17/.suo
+/LABS C++/.vs/LABS C++/v17/Browse.VC.db
