--- a/.gitignore
+++ b/.gitignore
@@ -430,3 +430,4 @@ FodyWeavers.xsd
 
 /LABS C++/.vs/LABS C++/v17/.suo
 /LABS C++/.vs/LABS C++/v17/Browse.VC.db
+/LABS C++/.vs/LABS C++/v17/Solution.VC.db
