--- a/LABS_C#/INST_LAB_1/INST_LAB_1.csproj
+++ b/LABS_C#/INST_LAB_1/INST_LAB_1.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exam.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
