--- a/LABS_C++/INST_LABS_5_3/INST_LABS_5_3.vcxproj
+++ b/LABS_C++/INST_LABS_5_3/INST_LABS_5_3.vcxproj
@@ -24,7 +24,7 @@
     <ProjectGuid>{b373ec21-d228-442f-8824-e5d3bfd5886f}</ProjectGuid>
     <RootNamespace>INSTLABS53</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>INST_LABS_5.3</ProjectName>
+    <ProjectName>INST_LAB_5.3</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
