попытка игнорирования изменений зависимых от дисплея

--- a/.gitignore
+++ b/.gitignore
@@ -431,3 +431,4 @@ FodyWeavers.xsd
 /LABS_C++/.vs/LABS C++/v17/.suo
 /LABS_C++/.vs/LABS C++/v17/Browse.VC.db
 /LABS_C++/.vs/LABS C++/v17/Solution.VC.db
+/LABS_C#/Solar_System_CW1/MainForm.Designer.cs
