--- a/LABS_C#/Solar_System_CW1/Solar_System_CW1.csproj
+++ b/LABS_C#/Solar_System_CW1/Solar_System_CW1.csproj
@@ -53,6 +53,7 @@
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="MoveLogic.cs" />
     <Compile Include="Program.cs" />
