--- a/LABS_C#/Solar_System_CW1/Solar_System_CW1.csproj
+++ b/LABS_C#/Solar_System_CW1/Solar_System_CW1.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tbody.cs" />
+    <Compile Include="TbodyManager.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TbodyManager.Designer.cs">
+      <DependentUpon>TbodyManager.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -72,6 +78,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="TbodyManager.resx">
+      <DependentUpon>TbodyManager.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
