--- a/LABS_C++/INST_LAB_9/INST_LAB_9.vcxproj
+++ b/LABS_C++/INST_LAB_9/INST_LAB_9.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{97ee37ab-85ab-43b6-9ab4-1ef820cc0b95}</ProjectGuid>
-    <RootNamespace>INSTLAB81</RootNamespace>
+    <ProjectGuid>{d467d89d-52ef-47df-86ec-49eaba18d27f}</ProjectGuid>
+    <RootNamespace>INSTLAB9</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>INST_LAB_8.1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="INST_LAB_8_1.cpp" />
+    <ClCompile Include="INST_LAB_9.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="TEXT.txt" />
+    <Text Include="Bagazhi.dat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
