херовая попытка удаление из индекса

--- a/.gitignore
+++ b/.gitignore
@@ -434,3 +434,6 @@ FodyWeavers.xsd
 /LABS_C++/.vs/LABS C++/v17/.suo
 /LABS_C++/.vs/LABS C++/v17/Browse.VC.db
 /LABS_C++/.vs/LABS C++/v17/Solution.VC.db
+/LABS_C++/INST_LAB_8.2/f.dat
+/LABS_C++/INST_LAB_8.2/g.dat
+/LABS_C++/INST_LAB_9/Bagazhi.dat
