--- a/LABS_C#/Solar_System_CW1/Solar_System_CW1.csproj
+++ b/LABS_C#/Solar_System_CW1/Solar_System_CW1.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Coordinate.cs" />
+    <Compile Include="JsonHandler.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,7 +59,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
-    <Compile Include="MoveLogic.cs" />
+    <Compile Include="MoveAndCollisions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tbody.cs" />
