--- a/LABS_C#/Solar_System_CW1/Solar_System_CW1.csproj
+++ b/LABS_C#/Solar_System_CW1/Solar_System_CW1.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{29B0909D-4771-442B-AD92-A44D96E05CC0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Solar_System_CW1</RootNamespace>
-    <AssemblyName>Solar_System_CW1</AssemblyName>
+    <AssemblyName>Solar System Simulation</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -37,7 +37,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>iconfinder-517-astronomy-plenet-education-learning-4212897_114939.ico</ApplicationIcon>
+    <ApplicationIcon>1455554317_line-36_icon-icons.com_53328.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Costura, Version=6.0.0.0, Culture=neutral, PublicKeyToken=9919ef960d84173d, processorArchitecture=MSIL">
@@ -109,7 +109,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="iconfinder-517-astronomy-plenet-education-learning-4212897_114939.ico" />
+    <Content Include="1455554317_line-36_icon-icons.com_53328.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.8.2\build\Fody.targets" Condition="Exists('..\packages\Fody.6.8.2\build\Fody.targets')" />
